--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,22 @@
 	font-style: italic;
 }
 
+.error {
+	color: red !important;
+}
+
+.tata {
+	z-index: 99999999 !important;
+}
+
+.tata-icon{
+	color:white !important;
+}
+
+.tata-close{
+	color:white !important;
+}
+
 html {
 	--scrollbarBG: #f4e5bc;
 	--thumbBG: #ffaa49;
@@ -273,7 +289,7 @@ nav .row .nav-menu .menu-row .menu-li .menu-call-to-action:hover {
 
 .gallery .gallery-box .img-thumbnail {
 	flex: 0 0 auto;
-	width: 24%;
+	width: 32%;
 	margin-bottom: 20px;
 	transition: all 0.3s ease-in-out;
 }
@@ -464,7 +480,7 @@ footer .last-footer p {
 	color: #3c3489;
 	text-transform: capitalize;
 	letter-spacing: 2px;
-	font-size: 40px;
+	font-size: 55px;
 	font-weight: 800;
 	margin: 0;
 	padding-right: 100px;
@@ -499,7 +515,7 @@ footer .last-footer p {
 .about .about-row .col-3-about .about-card h4 {
 	color: #3c3489;
 	text-align: center;
-	font-size: 30px;
+	font-size: 25px;
 	font-weight: 600;
 	margin-bottom: 5px;
 	margin-top: 15px;
@@ -1119,9 +1135,9 @@ footer .last-footer p {
 }
 
 .hero {
-	padding: 100px 0;
+	padding: 140px 0;
 	width: 100%;
-	background-image: linear-gradient(rgba(255, 170, 73, 0.5), rgba(244, 229, 188, 0.6)), url("../images/banner.jpg");
+	background-image: linear-gradient(rgba(255, 170, 73, 0.6), rgba(244, 229, 188, 0.6)), url("../images/page-banner.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -1749,7 +1765,7 @@ footer .last-footer p {
 
 #gallery li .img-thumbnail{
 	display: inline-block;
-	width: 75%;
+	width: 90%;
 	transition: all 0.3s ease-in-out;
 }
 #gallery li .img-thumbnail img {
@@ -1993,4 +2009,16 @@ ul ul ul {
 .mission-col .text h5{
 	color:#3c3489;
 	font-weight: 600;
+}
+
+.parent:hover>.small-child {
+	display: block;
+	position: absolute;
+	left: 55px;
+	top:30px;
+	box-shadow: 1px 1px 1px 1px #818181;
+}
+
+.parent:hover>.last-child {
+	left: -91px;
 }
